--- a/config/database.yml
+++ b/config/database.yml
@@ -17,7 +17,7 @@ development:
   encoding: unicode
   database: nownexter_development
   pool: 5
-  username: nownexter
+  username: nownexter1
   password:
 
   # Connect on a TCP socket. Omitted by default since the client uses a
@@ -43,7 +43,7 @@ test:
   encoding: unicode
   database: nownexter_test
   pool: 5
-  username: nownexter
+  username: nownexter1
   password:
 
 production:
@@ -51,5 +51,5 @@ production:
   encoding: unicode
   database: nownexter_production
   pool: 5
-  username: nownexter
+  username: nownexter1
   password:
